<resources>
    <string name="app_name">Geo Guesser</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="progressText">Question </string>
    <string name="question">Question1</string>
    <string name="congratulationText">You finished the quiz with a score of </string>
    <string name="nextText">What do you want to do next?</string>
    <string name="negativeButtonText">RESTART</string>
    <string name="positiveButtonText">FINISH</string>
    <string name="onCorrectAnswer">Correct Answer!</string>
    <string name="onIncorrectAnswer">Incorrect Answer, the correct answer is  </string>
    <string name="hintBurttonText">Hint</string>
    <string name="scoreText">Score:</string>
    <string name="appName">GeoGuesser</string>
    <string name="score">"Score: "</string>
    <string name="outOfHintsText">Out of hints</string>
    <string name="q0">Which ocean lies on the east coast of the United States?</string>
    <string name="a1q0">Atlantic</string>
    <string name="a2q0">Pacific</string>
    <string name="a3q0">Indian</string>
    <string name="a4q0">Eastern</string>
    <string name="q1">Which is the world\'s highest mountain?</string>
    <string name="a1q1">K2</string>
    <string name="a2q1">Kilmanjaro</string>
    <string name="a3q1">Mount Everest</string>
    <string name="a4q1">Makalu</string>
    <string name="q2">How many Great Lakes are there?</string>
    <string name="a1q2">5</string>
    <string name="a2q2">6</string>
    <string name="a3q2">3</string>
    <string name="a4q2">7</string>

    <string name="q3">Which is the longest river in the U.S.?</string>
    <string name="a1q3">Missouri River</string>
    <string name="a2q3">Yukon River</string>
    <string name="a3q3">Colorado River</string>
    <string name="a4q3">Misisipi River</string>
    <string name="q4">Which of these cities is not in Europe?</string>
    <string name="a1q4">London</string>
    <string name="a2q4">Prague</string>
    <string name="a3q4">Moscow</string>
    <string name="a4q4">Reykjavik</string>
    <string name="q5">The United Kingdom is comprised of how many countries?</string>
    <string name="a1q5">6</string>
    <string name="a2q5">5</string>
    <string name="a3q5">4</string>
    <string name="a4q5">7</string>
    <string name="q6">Which of the following countries do not border France?</string>
    <string name="a1q6">Netherlands</string>
    <string name="a2q6">Germany</string>
    <string name="a3q6">Italy</string>
    <string name="a4q6">Spain</string>
    <string name="q7">Between which two countries/states is the Bering Strait located?</string>
    <string name="a1q7">Alaska and Russia</string>
    <string name="a2q7">France and England</string>
    <string name="a3q7">Findland and Sweden</string>
    <string name="a4q7">France and Germany</string>
    <string name="q8">Which is the longest river in the world?</string>
    <string name="a1q8">Amazon River</string>
    <string name="a2q8">Yellow River</string>
    <string name="a3q8">Nile River</string>
    <string name="a4q8">Congo River</string>
    <string name="q9">What is the Ring of Fire?</string>
    <string name="a1q9">The name given to the volcanoes that surround Hawaii</string>
    <string name="a2q9">The nickname for the Kilauea Volcano, one of the World\'s most active volcanoes</string>
    <string name="a3q9">An area in the basin of the Pacific Ocean where a large number of earthquakes and volcanic eruptionns occur</string>
    <string name="a4q9">A specific phase of an erupting volcano</string>
    <string name="q10">Which is the smallest country, measured by total land area?</string>
    <string name="a1q10">Monaco</string>
    <string name="a2q10">Vatican City</string>
    <string name="a3q10">Maldives</string>
    <string name="a4q10">Tuvalu</string>


</resources>