<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
         android:textColor="#FFFFFF"
        android:id="@+id/scoreText"
        android:gravity="end"
        android:text="@string/score"
        android:textSize="24sp"
        tools:text="@string/scoreText" />

    <TextView

        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
         android:text="@string/question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Question Text"
        android:textColor="@color/questionTextColor"
        android:gravity="center_horizontal"

        />
    <TextView
        android:id="@+id/progressText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/progressText"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Question 1 out of 10" />



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="100sp"
           />


        <Button
            android:id="@+id/option1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"

            android:layout_centerVertical="true"
            android:layout_marginTop="0dp"
            android:background="@color/trueButtonColor"
            android:text="@string/option1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_below="@+id/progressBar"
            android:id="@+id/option2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/option1"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/option1"
            android:background="@color/falseButtonColor"
            android:text="@string/option2"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/option3"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option1"
            android:textColor="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_marginTop="0dp"
            android:background="@color/trueButtonColor"
            android:text="@string/option3"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <Button
            android:layout_below="@+id/option2"
            android:id="@+id/option4"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/option3"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/option3"
            android:background="@color/falseButtonColor"
            android:text="@string/option4"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            />
        <Button
            android:layout_below="@+id/option4"
            android:id="@+id/hint"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/option3"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/option3"
            android:background="@color/hintColor"
            android:textColor="@color/textColor"
            android:text="@string/hintBurttonText"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>